# flopsearch

./: .gitignore  README.md
.github/workflows/: CI.yml  R-CMD-check.yaml
flop/: Cargo.toml  README.md  er-150-12_1000-gaussian-standardized_0_data.csv
flop/src/: algo.rs  bic.rs  dynamic_cholesky.rs  error.rs  fit_parents.rs  graph.rs  lib.rs  linalg.rs  main.rs  matrix.rs  pivoted_cholesky.rs  scores.rs  token_buffer.rs  utils.rs
flop_python/: Cargo.toml  README.md  flopsearch.pyi  pyproject.toml
flop_python/src/: lib.rs
flop_python/tests/: test_flop.py
flop_r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
flop_r/R/: extendr-wrappers.R
flop_r/man/: flop.Rd
flop_r/src/: Makevars.in  Makevars.win.in  entrypoint.c  flop-win.def
flop_r/src/rust/: Cargo.toml  flop
flop_r/src/rust/src/: lib.rs
flop_r/tests/: testthat.R
flop_r/tests/testthat/: test_flop.R
