[package]
name = "flopsearch"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flopsearch"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.34"
numpy = { version = "0.28", features = ["nalgebra"] }
pyo3 = "0.28"
flop = { path = "../flop" }
